--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Theft -- Juvenile fiction'
 - !lcsh 'Dollhouses -- Juvenile fiction'
+- GITenberg
 title: The Tale of Two Bad Mice
 url: http://www.gutenberg.org/ebooks/45264
